--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-mcinterface = { git = "https://github.com/arthomnix/mcinterface-rs" }
+mcinterface = "0.2"
 fixed = "1.24"
 
 [profile.dev]
