Use less integer bits and more fractional bits, add features for larger fixed point numbers

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,11 @@ edition = "2021"
 mcinterface = "0.2"
 fixed = "1.24"
 
+[features]
+default = [ "fixedi32" ]
+fixedi32 = []
+fixedi64 = []
+fixedi128 = []
+
 [profile.dev]
 opt-level = 1
